2008-09-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Add check for dbus-binding-tool

	* src/Makefile.am: Add rules for hd-marshal.[ch] generation.

	* src/hd-marshal.list: Add marshal definition for notification-sent
	and notification-updated signals.

	* src/hd-notification-manager.c (hd_notification_manager_next_id):
	  Don't crash if database could not be opened.
	  (hd_notification_manager_class_init): Add notification-sent and
	  notification-updated signals.
	  (hd_notification_manager_notify): Emit notification-sent and
	  notification-updated signals.
	* src/hd-notification-manager.h: Add notification-sent and
	  notification-updated signals.

	* src/hd-system-notifications.c:
	* src/hd-system-notifications.h: Add handling of system.note.infoprint
	and system.note.dialog notifications (from Diablo).

	* src/hildon-home.c (main): Create HDNotificationManager and
	HDSystemNotifications objects.

2008-09-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/Makefile.am:
	* src/hd-notification-manager.c (hd_notification_manager_init):
	* src/hd-notification-manager.xml (added):
	* src/notification-manager.xml (deleted): Rename
	notification-manager.xml to hd-notification-manager.xml. Use
	hd_notification_manager as prefix for the generated file. Use
	hd-notification-manager-glue.h as the generated file name.

2008-09-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac:
	* src/Makefile.am:
	* src/home.conf.in:
	* src/home.plugins.in: Add configuration files for the the home applet
	plugin manager.

	* debian/hildon-home.install: Install the new configuration files.

	* src/hildon-home.c (home_plugin_added, home_plugin_removed, main):
	Add support for the home applet plugins.

2008-09-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Require libhildondesktop >= 2.1.4.

	* src/hildon-home.c (signal_handler): Use hd_stamp_file_finalize
	function.
	(main): Use hd_stamp_file_init function.
